
2019-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: moved alignment defines from libcob/common.h here
	* cobc.h: moved alignment exception for hpux from libcob/common.h here
	* codeoptim.c, cobc.h: generate the actual requested code w/o the attribute
	  __unaligned instead of overriding the attribute in the header
	* tree.h: removed duplicate redefinition of atol/atoll

2019-09-15  Ron Norman <rjn@inglenet.com>

	* cobc.h: For HPUX set COB_ALLOW_UNALIGNED as undefined
	* typeck.c: Emit ADD/SUBTRACT shortcut for COMP-5 only 
	            if COB_ALLOW_UNALIGNED defined
	* tree.h: Revert 'lock_mode' back to an 'int'
	* codegen.c: Changes for 'lock_mode' being an 'int'
	* cobc.h: Add COB_MEM_SIZE as size of cob_mem_struct rounded up to
	          multiple of sizeof(long long)
	* cobc.c: Use COB_MEM_SIZE as size of cob_mem_struct
	          To avoid aborts on system that requires aligned data

2019-09-12  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l, parser.y: allow LENGTH *OF* to remove the ambiguity for
	  REPOSITORY. FUNCTION LENGTH INTRINSIC. and register LENGTH OF

2019-09-09  Ron Norman <rjn@inglenet.com>

	* cobc.h: Add defines for COB_ALIGN_8 to set 8 byte boundary alignment

2019-09-03  Ron Norman <rjn@inglenet.com>

	* tree.h: Add checks for C compiler presence of __FUNCTION__
	* typeck.c: Fix some #if to include missing conditions

2019-08-25  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: allow to force aligned pointer access by external
	  define of COB_NON_ALIGNED

2019-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_encode_program_id), parser.y, codegen.c, cobc.c: changed
	  method signature to remove unnecessary check for path separators and
	  do case folding as requested - callers use explicit COB_FOLD_UPPER for
	  functions now instead of additional folding after the call, also lead
	  to removing (user_func_upper) from codegen.c
	* typeck.c (cb_encode_program_id): check for path separators now backwards