@@ -1,4 +1,4 @@
-## Copyright (C) 2014-2019 Free Software Foundation, Inc.
+## Copyright (C) 2014-2020 Free Software Foundation, Inc.
 ## Written by Ron Norman, Simon Sobisch
 ##
 ## This file is part of GnuCOBOL.
@@ -147,7 +147,7 @@ AT_DATA([prog.cob], [
        01  Detail-Line TYPE DETAIL.
            05 LINE NUMBER PLUS 1.
               10 COL 1      PIC X(20)  VALUE '12345678901234567890'.
-              10 COL PLUS 2 PIC X(4)   VALUE 'ABCD'.
+              10 COL PLUS 3 PIC X(4)   VALUE 'ABCD'.
               10 COL 30     PIC X(1)   VALUE '!'.
 
        PROCEDURE DIVISION.
@@ -351,7 +351,7 @@ AT_DATA([prog.cob], [
        01  rp-detail TYPE DE.
          02  LINE + 1.
          03     COL 1; SOURCE foo, PIC X(30).
-         03     COL + 1            PIC X(6) VALUE "<--->".
+         03     COL + 2            PIC X(6) VALUE "<--->".
 
        PROCEDURE DIVISION.
            OPEN OUTPUT report-file.
@@ -411,7 +411,7 @@ AT_DATA([prog.cob], [
        01  rp-detail TYPE DE.
          02  LINE + 1.
          03            SOURCE foo, PIC X(30).
-         03     COL + 1            PIC X(6) VALUE "<--->".
+         03     COL + 2            PIC X(6) VALUE "<--->".
 
        PROCEDURE DIVISION.
            OPEN OUTPUT report-file.
@@ -1641,7 +1641,7 @@ AT_DATA([prog.cob], [
                03  COLUMN 27   PIC X(41) VALUE
                    'C U S T O M E R  C H A R G E  R E P O R T'.
                03  COLUMN 90   PIC X(04) VALUE 'PAGE'.
-               03  COLUMN 95   PIC ZZZZ9 SOURCE PAGE-COUNTER.
+               03  COLUMN + 2  PIC ZZZZ9 SOURCE PAGE-COUNTER.
            02  LINE PLUS 2.
                03  COLUMN 01   PIC X(09) VALUE 'CUST. NO.'.
                03  COLUMN 15   PIC X(10) VALUE 'CUST. NAME'.
@@ -2976,7 +2976,7 @@ AT_DATA([prog.cob], [
           TYPE DETAIL LINE PLUS  1.
             05  COLUMN PLUS 1 PIC Z9   
                   SOURCE LINE-COUNTER OF STUDENT-REPORT.
-            05  COLUMN LEFT PLUS 2   PIC Z(5)9 SOURCE STUDENT-ID.
+            05  COLUMN LEFT PLUS 3   PIC Z(5)9 SOURCE STUDENT-ID.
             05  COLUMN CENTER 25     PIC X(20) SOURCE STUDENT-NAME.
             05  COLUMN RIGHT  43     PIC X(5)  SOURCE MAJOR.
             05  COLUMN        45     PIC XXX   VALUE ":-:".
@@ -4144,7 +4144,7 @@ AT_DATA([prog.cob], [
 
        01  RP-DTL1 TYPE DETAIL,  LINE + 1.
             03  NUMS  COLUMN 1   PIC 999 OCCURS 3 TIMES STEP 10.
-            03  MARK  COLUMN + 2 PIC X(4).
+            03  MARK  COLUMN + 3 PIC X(4).
 
        01  rp-dtl2 TYPE DETAIL, LINE + 1.
             03  grps  COLUMN 1 OCCURS 3 TIMES.
@@ -4155,12 +4155,12 @@ AT_DATA([prog.cob], [
 
        01  RP-DTL3 TYPE DETAIL, LINE + 1.
             03  NNNS  COLUMN 1, 11, 21, 27 PIC 999.
-            03  TAGP  COLUMN PLUS 3 PIC X(4).
+            03  TAGP  COLUMN PLUS 4 PIC X(4).
 
        01  RP-DTL4 TYPE DETAIL, LINE + 1.
             03  NUM4A                PIC 999.
-            03  NUM4B COLUMN PLUS 7  PIC 999 OCCURS 3.
-            03  MRK4  COLUMN + 2     PIC X(4).
+            03  NUM4B COLUMN PLUS 8  PIC 999 OCCURS 3 STEP 10.
+            03  MRK4  COLUMN + 3     PIC X(4).
 
        PROCEDURE DIVISION.
            OPEN OUTPUT rp-file
@@ -4263,7 +4263,7 @@ AT_DATA([progv.cob], [
 
        01  RP-DTL1 TYPE DETAIL,  LINE + 1.
             03  NUMS  COLUMN 1   PIC 999 OCCURS 3 TIMES STEP 10.
-            03  MARK  COLUMN + 2 PIC X(4).
+            03  MARK  COLUMN + 3 PIC X(4).
 
        01  RP-DTL2 TYPE DETAIL, LINE + 1.
             03  GRPS  COLUMN 1 OCCURS 3 TIMES.
@@ -4274,12 +4274,12 @@ AT_DATA([progv.cob], [
 
        01  RP-DTL3 TYPE DETAIL, LINE + 1.
             03  NNNS  COLUMN 1, 11, 21, 27 PIC 999.
-            03  TAGP  COLUMN PLUS 3 PIC X(4).
+            03  TAGP  COLUMN PLUS 4 PIC X(4).
 
        01  RP-DTL4 TYPE DETAIL, LINE + 1.
             03  NUM4A               PIC 999.
-            03  NUM4B COLUMN PLUS 7 PIC 999 OCCURS 3.
-            03  MRK4  COLUMN + 2    PIC X(4).
+            03  NUM4B COLUMN 11     PIC 999 OCCURS 3 STEP 10.
+            03  MRK4  COLUMN + 3    PIC X(4).
 
        PROCEDURE DIVISION.
            OPEN OUTPUT RP-FILE
@@ -4359,7 +4359,7 @@ AT_DATA([progl.cob], [
 
        01  RP-DTL1 TYPE DETAIL, LINE + 1.
             03  NUMS  COLUMN 1   PIC 999 OCCURS 3 TIMES STEP 10.
-            03  MARK  COLUMN + 2 PIC X(4).
+            03  MARK  COLUMN + 3 PIC X(4).
 
        01  RP-DTL2 TYPE DETAIL, LINE + 1.
             03  GRPS  COLUMN 1 OCCURS 3 TIMES.
@@ -4370,12 +4370,12 @@ AT_DATA([progl.cob], [
 
        01  RP-DTL3 TYPE DETAIL, LINE + 1.
             03  NNNS  COLUMN 1, 11, 21, 27 PIC 999.
-            03  TAGP  COLUMN PLUS 3 PIC X(4).
+            03  TAGP  COLUMN PLUS 4 PIC X(4).
 
        01  RP-DTL4 TYPE DETAIL, LINE + 1.
             03  NUM4A               PIC 999.
-            03  NUM4B COLUMN PLUS 7 PIC 999 OCCURS 3.
-            03  MRK4  COLUMN + 2    PIC X(4).
+            03  NUM4B COLUMN 11     PIC 999 OCCURS 3 STEP 10.
+            03  MRK4  COLUMN + 3    PIC X(4).
 
        PROCEDURE DIVISION.
            OPEN OUTPUT RP-FILE
@@ -4494,8 +4494,9 @@ AT_CHECK([DD_PRINTOUT=./report.txt $COBCRUN_DIRECT ./prog], [0], [],
 
 AT_CAPTURE_FILE(./report.txt)
 
-AT_DATA([reference], [hello                          <--->
-goodbye                        <--->
+AT_DATA([reference],
+[hello                         <--->
+goodbye                       <--->
 
 ])
 
@@ -4591,7 +4592,7 @@ AT_DATA([prog.cob], [
        01  rp-detail TYPE DE.
          02  LINE + 1.
          03     COL 1; SOURCE foo, PIC X(30).
-         03     COL + 1            PIC X(6) VALUE "<--->".
+         03     COL + 2            PIC X(6) VALUE "<--->".
 
        PROCEDURE DIVISION.
            OPEN OUTPUT report-file.
